--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Assignment_3
 excludes=
 file.reference.postgresql-42.2.19.jar=C:\\Users\\92308\\Downloads\\postgresql-42.2.19.jar
+file.reference.sqljdbc4-3.0.jar=C:\\Users\\92308\\Downloads\\sqljdbc4-3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.19.jar}
+    ${file.reference.postgresql-42.2.19.jar}:\
+    ${file.reference.sqljdbc4-3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Assignment_3
-main.class=assignment.pkg3.Assignment3
+main.class=FORM.Assignment3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
